Fixed npm start

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node app"
+    "start": "node main.js"
   },
   "dependencies": {
     "express": "3.0.0rc1",
@@ -16,4 +16,3 @@
     "connect-couchdb": "*"
   }
 }
-
