--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "start": "node main.js"
   },
   "dependencies": {
-    "express": "3.0",
-    "bind": "*",
-    "cradle": "*",
-    "markdown": "*",
-    "openid": "*",
-    "underscore": "*",
-    "connect": "*",
-    "connect-couchdb": "*"
+    "express": "3.0.6",
+    "bind": "0.1.7",
+    "cradle": "0.6.7",
+    "markdown": "0.5.0",
+    "openid": "0.5.5",
+    "underscore": "1.6.0",
+    "connect": "2.14.3",
+    "connect-couchdb": "0.4.2"
   }
 }
